# pygame-teletype

./: .flake8  MANIFEST.in  README.md  pyproject.toml  setup.py
src/teletype/: demo.py  multidemo.py  teletype.py
src/teletype/data/: multidemo.json
teleprinter/: __init__.py  demo.py  teleprinter.py
teletype/: __init__.py  demo.py  multidemo.py  teletype.py
