[project]
name = "pygame-teletype"
description = "A textbox with a teletype text effect as in old adventure games."
version = "0.0.2"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
]

dependencies = [
    "pygame-ce",
    "pgcooldown",
]

[project.scripts]
teletype-demo = "teletype.demo:main"
teletype-multidemo = "teletype.multidemo:main"

[project.urls]
homepage = "https://github.com/dickerdackel/pygame-teletype"
bugtracker = "https://github.com/DickerDackel/pygame-teletype/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-rA -s --cov-report term-missing -s"
testpaths = [
    "tests",
]
